# smartlinks-cpp

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  coverage.sh  docker-compose.test.yml  docker-compose.yml  run_all_tests.sh  run_gateway_smoke_tests.sh
.github/workflows/: cmake-multi-platform.yml
config/: config.docker.json  config.json
diagrams/: FUNCTIONAL_PROCESSES_INDEX.md  FUNCTIONAL_PROCESSES_dsl_parsing.md  FUNCTIONAL_PROCESSES_http_lifecycle.md  FUNCTIONAL_PROCESSES_ioc_resolution.md  FUNCTIONAL_PROCESSES_plugin_loading.md  README.md  architecture-overview.mmd  business-process-create-link.mmd  business-process-freeze.mmd  business-process-jwt-auth.mmd  business-process-manage-rules.mmd  business-process-redirect.mmd  dsl-evaluation-flow.mmd  dsl-plugin-architecture.mmd  dsl-plugin-system.mmd  integrations.mmd  jwt-authorization-flow.mmd  microservices-architecture.mmd  smartlinks-c4-component.dsl  smartlinks-c4-component.mmd  smartlinks-internal-architecture.mmd
doc/: ARCHITECTURE.md  BUSINESS_PROCESSES.md  COMPLEXITY.md  DSL.odt  DSL_GRAMMAR.md  GATEWAY.md  INFORMATION_SCHEMA.md  INTEGRATIONS.md  JWT.md  PATTERNS.md  RUN_ALL_TESTS.md  TESTING.md
include/domain/: i_freeze_smart_link_service.hpp  i_jwt_validator.hpp  i_mongodb_repository.hpp  i_redirect_rule.hpp  i_redirectable_smart_link.hpp  i_smart_link.hpp  i_smart_link_redirect_rules_repository.hpp  i_smart_link_redirect_rules_repository_dsl.hpp  i_smart_link_redirect_service.hpp  i_statable_smart_link.hpp  i_statable_smart_link_repository.hpp  i_supported_http_request.hpp
include/dsl/: context.hpp
include/dsl/ast/: and_expression.hpp  authorized_expression.hpp  datetime_expressions.hpp  expression.hpp  language_expressions.hpp  or_expression.hpp  redirect_rule.hpp  rules_set.hpp
include/dsl/parser/: and_expression_parser.hpp  combined_parser.hpp  expression_parser.hpp  i_combined_parser.hpp  i_parser.hpp  or_expression_parser.hpp  parser_registry.hpp  parser_utils.hpp  primary_expression_parser.hpp  register_parser_command.hpp
include/dsl/plugin/: plugin_loader.hpp
include/impl/: freeze_smart_link_service.hpp  jwt_validator.hpp  mongodb_repository.hpp  redirect_rule.hpp  redirectable_smart_link.hpp  smart_link.hpp  smart_link_redirect_rules_repository.hpp  smart_link_redirect_rules_repository_dsl.hpp  smart_link_redirect_service.hpp  smart_link_redirect_service_dsl.hpp  statable_smart_link.hpp  statable_smart_link_repository.hpp  supported_http_request.hpp
include/ioc/: clear_current_scope_command.hpp  command.hpp  dependency_resolver.hpp  init_command.hpp  ioc.hpp  register_dependency_command.hpp  register_scoped_dependency_command.hpp  register_singleton_dependency_command.hpp  register_transient_dependency_command.hpp  scope.hpp  set_current_scope_command.hpp  unregister_dependency_command.hpp  update_ioc_resolve_dependency_strategy_command.hpp
include/middleware/: drogon_middleware_adapter.hpp  i_middleware.hpp  method_not_allowed_middleware.hpp  not_found_middleware.hpp  temporary_redirect_middleware.hpp  unprocessable_content_middleware.hpp
jwt-service/: .dockerignore  Dockerfile  entrypoint.sh  hash-password.js  package.json
jwt-service/src/: server.js
mongo-init/: 00-init-all-databases.js  init-all.js  init-db-dsl-test.js  init-db-dsl.js  init-db.js  init-users.js  migrate_rules_to_dsl.js
nginx/: nginx.conf
plugins/authorized/: CMakeLists.txt
plugins/authorized/include/: authorized_parser.hpp  context_2_authorized_accessible.hpp  i_authorized_accessible.hpp
plugins/authorized/src/: context_2_authorized_accessible.cpp  plugin_entry.cpp
plugins/datetime/: CMakeLists.txt
plugins/datetime/include/: context_2_time_point_accessible.hpp  datetime_parser.hpp  i_time_point_accessible.hpp
plugins/datetime/src/: context_2_time_point_accessible.cpp  plugin_entry.cpp
plugins/language/: CMakeLists.txt
plugins/language/include/: context_2_language_accessible.hpp  i_language_accessible.hpp  language_parser.hpp
plugins/language/src/: context_2_language_accessible.cpp  plugin_entry.cpp
src/: main.cpp
src/dsl/: context.cpp
src/dsl/parser/: and_expression_parser.cpp  combined_parser.cpp  or_expression_parser.cpp  primary_expression_parser.cpp
src/dsl/plugin/: plugin_loader.cpp
src/impl/: freeze_smart_link_service.cpp  jwt_validator.cpp  mongodb_repository.cpp  redirect_rule.cpp  redirectable_smart_link.cpp  smart_link.cpp  smart_link_redirect_rules_repository.cpp  smart_link_redirect_rules_repository_dsl.cpp  smart_link_redirect_service.cpp  smart_link_redirect_service_dsl.cpp  statable_smart_link.cpp  statable_smart_link_repository.cpp  supported_http_request.cpp
src/ioc/: clear_current_scope_command.cpp  dependency_resolver.cpp  init_command.cpp  ioc.cpp  register_dependency_command.cpp  scope.cpp  set_current_scope_command.cpp  update_ioc_resolve_dependency_strategy_command.cpp
src/middleware/: drogon_middleware_adapter.cpp  method_not_allowed_middleware.cpp  not_found_middleware.cpp  temporary_redirect_middleware.cpp  unprocessable_content_middleware.cpp
tests/: CMakeLists.txt  README.md  cucumber.yml  run_bdd_tests.sh
tests/bdd/: README.md  smartlinks_dsl_tests.cpp  smartlinks_tests.cpp
tests/jwt/: Dockerfile  README.md  TEST_RESULTS.md  auth.test.js  edge-cases.test.js  health.test.js  introspect.test.js  jwks.test.js  package.json  run-tests.sh  security.test.js  setup.js
tests/support/: test_context.cpp  test_context.hpp
tests/unit/: ioc_tests.cpp
